# haskell-web-app-freer

./: Makefile  README.md  default.nix  haskell-web-app-freer.cabal  haskell-web-app-freer.cfg  packages.nix  shell.nix
app/: Main.hs
sql/: db_create.sql  db_drop.sql  moo.example.cfg
sql/local_migrations/: moo.cfg  test-data.txt
sql/migrations/: initial.txt
src/: App.hs  Config.hs  Database.hs  Types.hs
src/Api/: Task.hs  User.hs
src/Database/: Task.hs  User.hs
src/Domain/: Task.hs  User.hs
src/Models/: Task.hs  User.hs
src/Util/: Logger.hs
src/Util/Database/: Pool.hs
test/Database/: UserSpec.hs
test/Domain/: UserSpec.hs
