name:                haskell-web-app-freer
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian Jones
maintainer:          bcj@alasconnect.com
copyright:           AlasConnect
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     App
                     , Api.User
                     , Api.Task
                     , Config
                     , Database
                     , Database.Task
                     , Database.User
                     , Domain.Task
                     , Domain.User
                     , Models.Task
                     , Models.User
                     , Types
                     , Util.Database.Pool
                     , Util.Logger
  build-depends:       aeson
                     , base
                     , beam-core
                     , beam-postgres
                     , bytestring
                     , containers
                     , dhall
                     , ekg
                     , freer-simple
                     , lens
                     , logging-effect
                     , monad-control
                     , resourcet
                     , resource-pool
                     , postgresql-simple
                     , servant
                     , servant-server
                     , tagged
                     , text
                     , time
                     , transformers-base
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , LambdaCase
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , TypeApplications
                     , TypeOperators
                     , TypeSynonymInstances
  ghc-options:         -O0

executable haskell-web-app-freer
  main-is:             Main.hs
  build-depends:       base
                     , optparse-applicative
                     , haskell-web-app-freer
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-maxN2 -Wall -j -O0 -v0 -with-rtsopts=-T

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Database.UserSpec
                     , Domain.UserSpec
  hs-source-dirs:      test
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , freer-simple
                     , hspec == 2.*
                     , haskell-web-app-freer
  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , GADTs
                     , LambdaCase
                     , OverloadedStrings
                     , TypeOperators
